This file documents the revision history for Perl extension Catalyst.

5.62
        - Fixed engine detection to allow custom mod_perl engines.
        - Static::Simple: Fixed bug in ignore_dirs under win32.
        - Display version numbers of loaded plugins. (Curtis Poe)
        - Added class and method for caught exception messages.
        - Updated PAR support to use "make catalyst_par",
          packages are no longer written by Makefile.PL.
        - Automatically determine Content-Length when serving a
          filehandle.
        - Exceptions now return status 500.
        - Updated for Module::Install 0.44.
        - Fixed additional file installation for multi level app names.
        - Added REDIRECT_URL support for applications running behind
          a RewriteRule in Apache. (Carl Franks)
        - Fixed FastCGI engine under win32. (Carl Franks)
        - FastCGI doc updates (Bill Moseley)
        - Bugfix for $c->model and friends (defined).

5.61    2005-12-02 00:00:00
        - Fixed ExtUtils::AutoInstall Bootstrap Code in Makefile.PL

5.60    2005-12-01 22:15:00
        - Fixed Path and index actions in the appclass,
          including those that attach to /
        - Index is now weighted higher than Path
        - Fixed restarter and -d debug switch in server.pl.
        - Added a warning if you attempt to retrieve a parameter
          using $c->req->params('foo').
        - Fixed the Module::Install::Catalyst @ISA bug

5.59    2005-11-30 13:25:00
        - Fixed shebang line for generated scripts
        - Fixed forward to classes ($c->forward(qw/MyApp foo/))
        - Wrap use block in begin to quelch C:C3 warnings
        - Removed scrollbar from debug output
        - Fixed catalyst_par_core() and catalyst_par_multiarch()

5.58    2005-11-24 10:51:00
        - Added ExtUtils::AutoInstall support
	    - Allow overriding path in Catalyst::Helper.
        - Added -makefile to catalyst.pl to generate a new Makefile.PL.