@@ -1,6 +1,8 @@
 This file documents the revision history for Perl extension Catalyst.
 
 5.62
+        - Action list in debug mode is now displayed as a tree in the
+          correct execution order.
         - Fixed engine detection to allow custom mod_perl engines.
         - Static::Simple: Fixed bug in ignore_dirs under win32.
         - Display version numbers of loaded plugins. (Curtis Poe)
